# AGENTIC-AI-PRACTICE

./: lab3_MCP.ipynb  pyproject.toml  slide_kit.py
.ipynb_checkpoints/: lab4_DeepAgents-checkpoint.ipynb
sandbox/: charging.md  fleet.md
