[project]
name = "FINGUARD-AI"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "deepagents>=0.6.12",
    "gradio>=6.9.0",
    "jupyter>=1.1.1",
    "langchain>=1.2.15",
    "langchain-community>=0.4.1",
    "langchain-mcp-adapters>=0.3.0",
    "langchain-openai>=1.1.11",
    "langgraph>=1.1.2",
    "lxml>=6.1.0",
    "openai>=2.29.0",
    "playwright>=1.58.0",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.2",
    "python-pptx>=1.0.2",
    "wikipedia>=1.4.0",
]
